--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Gongcha_Health</string>
     <string name="setting_frag">설정 fragment</string>
-    <string name="training_frag">훈련 fragment</string>
-    <string name="report_frag">보고서 fragment</string>
+    <string name="training_frag">훈련 (준성)fragment</string>
+    <string name="running_frag">달리기 (은솔)fragment</string>
     <string name="training_title">훈련</string>
-    <string name="report_title">보고서</string>
+    <string name="running_title">달리기</string>
     <string name="setting_title">설정</string>
 
 </resources>
