--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,16 @@
     <string name="setting_title">설정</string>
     <string name="ganji_title">당신은 살을 뺄 준비가 되어있다.</string>
     <string name="ganji_sulmyung">사진 클릭시 해당메뉴로 이동합니다</string>
+    <string name="high_Knees">다리는 엉덩이 간격으로 벌리고 두손은 앞으로 어깨 높이만큼 올립니다. 그리고 시선은 정면을 바라보며 번갈아가면서 무릎을 엉덩이 높이까지 올리는것을 반복합니다.</string>
+    <string name="jumping_Jack">팔은 가볍게 늘어드리며, 무릎을 펴고 똑바로 서서 시작합니다. 그리고 점프를 하면서 동시에 발을 양쪽으로 벌리고 옆으로 뻗으면서 들어 올려서 공중에서 만나도록 합니다. 그런 다음 착지하면서 시작 자세라 돌아오세요.</string>
+    <string name="standing_bicycle">두발을 어깨 너비만큼 벌리고 섭니다. 무릎을 반대편 팔꿈치로가져오세요. 다시 시작위치로 돌아가 다른 쪽으로 운동을 반복해줍니다. </string>
+    <string name="mountain_climber">푸시업 자세에서,한쪽 무릎을 가슴쪽으로 구부린후 가볍게 점프하 듯 다리를 바꾸어 구부립니다. 이 동작은 전신근육과 심혈관에 좋은 효과를줍니다. </string>
+    <string name="crunch">바닥에 똑바로 눕고, 허리부분으로 바닥을 눌러줍니다. 두손은 뒤통수에 가져다 대고 어깨뼈까지의 바닥에서 들어 올리며 오른쪽 다리가 바닥과 45도 각도가 되도록 하고 상체를 왼쪽으로 틀어줍니다. 이 후에 방향을 바꿔서 동일과정을 반복합니다.</string>
+    <string name="plank">엎드린 자세에서 팔뚝으로 중심을 잡고 다리는 약간 벌린 상태로 일자를 유지합니다. 몸은 전체에 걸쳐 일자 상태를 유지하고 팔꿈치와 어깨는 일자를 유지한후 복부에 힘을 주고 몸을 앞으로 들어 올립니다.</string>
+    <string name="HEEL_TOUCH">바닥에 등을 대고 무릎을 90도 구부립니다. 90도 구부려 무릎을 유지, 한쪽 발뒤꿈치를 처천히 바닥에 닿게합니다. 시작 위치로 다른쪽 다리를 반복합니다.</string>
+    <string name="cobra">바닥에 배를 두고 누운 다음 팔을 앞으로 뻗습니다. 다리와 골반은 땅바닥에 붙인 상태로 손을 서서히 가슴 앞으로 뻗어주며 몸통을 일으켜세웁니다.</string>
+    <string name="huri">바닥에 누워 양팔을 어깨너비로 들어 옆으로 뻗어 왼쪽 무릎을 굽혀서 가슴앞으로 당기며 왼쪽다리를 오른쪽으로 돌려 바닥으로 내립니다. 이후 무릎을 아래로 내리거나 위로 당기고 왼팔을 머리위로 뻗고 머리를 중립에 놓거나 좌우로 돌립니다.</string>
+    <string name="planktwist">기본자세는 플랭크 자세와 동일하며 엉덩이 밑쪽만 양옆으로 흔듭니다. 골반을 흔들때 땅에 닿지않도록 주의합니다.</string>
 
 
 </resources>
