feat) training_level2 "단단한 복근만들기" all development

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="cobra">바닥에 배를 두고 누운 다음 팔을 앞으로 뻗습니다. 다리와 골반은 땅바닥에 붙인 상태로 손을 서서히 가슴 앞으로 뻗어주며 몸통을 일으켜세웁니다.</string>
     <string name="huri">바닥에 누워 양팔을 어깨너비로 들어 옆으로 뻗어 왼쪽 무릎을 굽혀서 가슴앞으로 당기며 왼쪽다리를 오른쪽으로 돌려 바닥으로 내립니다. 이후 무릎을 아래로 내리거나 위로 당기고 왼팔을 머리위로 뻗고 머리를 중립에 놓거나 좌우로 돌립니다.</string>
     <string name="planktwist">기본자세는 플랭크 자세와 동일하며 엉덩이 밑쪽만 양옆으로 흔듭니다. 골반을 흔들때 땅에 닿지않도록 주의합니다.</string>
-
-
+    <string name="crunch_kick">양쪽 팔꿈치를 바닥에 받치고 누운 상태에서 오른쪽 다리는 무릎을 직각으로 만들어 세워준후 왼쪽 다리는 쭉 펴서 들어올립니다. 목이나 어깨에 힘을 주지않고 배와 허벅지힘을 사용합니다 </string>
+    <string name="cross_arm_crunch">양손을 가슴에 모은상태로 누은 다음 상체를 일으킵니다 동일한 동작을 반복하여 실시합니다</string>
+    <string name="russian_twist">러시안 트위스트는 볼록 튀어나온 뱃살 체지방의 연소에도 어느정도 도움을 주지만, 체지방의 연소 효과보다는 복부의 근육발달에 더 효과적인 운동입니다. 중앙의 복부와 옆구리에 있는 복사근 근육을 발달시켜 탄탄하게 만들어주는 효과가 있습니다. 본격적인 체지방 연소를 위해서는 유산소를 병행해야 합니다.</string>
+    <string name="hallow">바닥에누워 복근에 힘을주면서 팔과 어깨 머리 다리를 공주에 들어올려 최대한 뻗어줍니다. 허리가 바닥에서 떨어지지않도록 주의해야하고 10초후 원래자세로 돌아오며 이 동작을 반복합니다</string>
+    <string name="reverse_truck">바닥에 누워 두팔을 일직선이 되도록 뻗습니다 양발을 모아 다리를 수직으로 들어올립니다. 복부가 뒤틀리도록 발끝이 바닥에 닿기 전까지 사선방향으로 천천히내려줍니다. 시선은 다리의 반대방향입니다.</string>
+    <string name="seated_leg_circle">양 팔꿈치를 뒤로 기대어 누워주세요. 두 다리를 모으고 발끝을 세워줍니다 다리를 붙여주고 들어주세요 발끝에 원을 그리며 돌려주세요</string>
+    <string name="flutter_kick"> 바닥에 누워 누운상태에서 상체와 다리를 올립니다 물장구 치듯 한발씩 올렷다 내렸다가 반복합니다.</string>
 </resources>
