feat) Crolling (일단은 네이버뉴스.. kakao permision denied라서 )

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="running_frag">달리기 (은솔)fragment</string>
     <string name="training_title">훈련</string>
     <string name="running_title">달리기</string>
-    <string name="setting_title">설정</string>
+    <string name="setting_title">홈트레이닝</string>
     <string name="ganji_title">당신은 살을 뺄 준비가 되어있다.</string>
     <string name="ganji_sulmyung">사진 클릭시 해당메뉴로 이동합니다</string>
     <string name="high_Knees">다리는 엉덩이 간격으로 벌리고 두손은 앞으로 어깨 높이만큼 올립니다. 그리고 시선은 정면을 바라보며 번갈아가면서 무릎을 엉덩이 높이까지 올리는것을 반복합니다.</string>
